--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gardeners"
         android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="false">
+        android:largeHeap="true"
+        >
         <activity
             android:name=".DiaryFragment"
             android:exported="false" />
