--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name="com.google.android.actions"
             android:resource="@xml/actions" />
 
+        <meta-data
+            android:name="com.robotemi.sdk.metadata.SKILL"
+            android:value="@string/app_name" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
